Trabajando en la pantalla de productos

--- a/system_huellitas/views/admin/menu_productos.html
+++ b/system_huellitas/views/admin/menu_productos.html
@@ -50,9 +50,12 @@
     </main>
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../controllers/utils/components.js"></script>
+    <!-- Agregamos el controlador general de la aplicacion-->
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
-    <script src="../../controllers/utils/admin.js"></script>
+    <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
+    <!-- Agregamos el controlador de la pagina web -->
+    <script type="text/javascript" src="../../controllers/admin/menu_productos.js"></script>
 </body>
 
 </html>
