--- a/system_huellitas/views/admin/index.html
+++ b/system_huellitas/views/admin/index.html
@@ -16,16 +16,14 @@
 <body class="bg-yellow-color">
     <main class="container p-4">
         <!-- Se centra la row tanto horizontalmente como veticalmente -->
-        <div class="row justify-content-center align-items-center">
+        <!-- Formuluraio para iniciar sesion -->
+        <div class="row justify-content-center align-items-center d-none" id="containerOne">
             <div class="col-sm-12 col-md-5 col-lg-5">
                 <img src="../../resources/img/png/huellitas_logo.png" class="img-fluid">
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <!-- Formulario -->
-                <form id="loginForm" class="d-none">
-                    <div>
-                        <h4 class="fw-semibold text-center">Inicio de sesión</h4>
-                    </div>
+                <form id="loginForm">
                     <!-- Row que contiene el icono y el input -->
                     <div class="row align-items-center">
                         <div class="col-auto ">
@@ -60,60 +58,78 @@
                             href="../admin/recuperacion_contra_1.html">¿Has olvidado tú contraseña?</a>
                     </div>
                 </form>
+            </div>
+        </div>
 
-                <form id="signUpForm" class="d-none">
-                    <div>
-                        <h4 class="fw-semibold text-center">Registrar primer usuario</h4>
+        <!-- Formulario para el primer uso -->
+        <div class="p-5 d-none" id="containerSecond">
+            <div class="row gx-5 d-flex align-items-center ">
+                <div class="col-sm-12 col-md-4 col-lg-4 d-none d-md-block">
+                    <div class="bg-orange-color text-light p-2 rounded-3">
+                        <h4 class="fw-semibold text-center mt-2">Registrar primer usuario</h4>
+                        <p class="text-center fw-light">¡Es un gusto tenerte en Huellitas Pets!</p>
                     </div>
-                    <div class="text-center">
-                        <div class="col-sm-12 col-md-auto">
-                            <img class="rounded-1" id="imagen" src="../../resources/img/png/rectangulo.png"
-                                width="120px" height="120px">
+                    <img src="../../resources/img/png/huellitas_logo.png" class="img-fluid ">
+                </div>
+                <div class="col-sm-12 col-md-8 col-lg-8 shadow p-4 rounded-4">
+                    <form id="signUpForm">
+
+                        <div class="text-center mb-4">
+                            <div class="col-sm-12 col-md-auto">
+                                <img class="picture rounded-circle" id="imagen"
+                                    src="../../resources/img/png/rectangulo.png" width="120px" height="120px">
+                            </div>
+                            <div class="col mt-3">
+                                <!-- Botón para cargar imagen -->
+                                <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden
+                                    required>
+                                <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                <label class="btn btn-red-color text-light" for="imgAdmin">Cargar
+                                    imagen</label>
+                            </div>
                         </div>
-                        <div class="col mt-4">
-                            <!-- Botón para cargar imagen -->
-                            <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden required>
-                            <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                            <label class="btn btn-red-color text-light " for="imgAdmin">Cargar
-                                imagen</label>
+                        <div class="row g-3">
+                            <div class="col-sm-12 col-md-6">
+                                <label for="nombreAdministrador" class="form-label">Nombre</label>
+                                <input id="nombreAdministrador" type="text" name="nombreAdmin" class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="apellidoAdministrador" class="form-label">Apellido</label>
+                                <input id="apellidoAdministrador" type="text" name="apellidoAdmin" class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="correoAdministrador" class="form-label">Correo</label>
+                                <input id="correoAdministrador" type="email" name="correoAdmin" class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="aliasAdministrador" class="form-label">Alias</label>
+                                <input id="aliasAdministrador" type="text" name="aliasAdmin" class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="claveAdministrador" class="form-label">Contraseña</label>
+                                <input id="claveAdministrador" type="password" name="claveAdmin" class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="confirmarClave" class="form-label">Confirmar contraseña</label>
+                                <input id="confirmarClave" type="password" name="confirmarClave" class="form-control"
+                                    required>
+                            </div>
+                            <input id="fechaRegistro" type="date" name="fechaRegistroAdmin" class="form-control" hidden>
+
+                            <div class="text-center mt-5">
+                                <button type="reset"
+                                    class="btn btn-red-color text-light p-2 rounded-3 me-2">Cancelar</button>
+                                <button type="submit"
+                                    class="btn btn-orange-color text-light p-2 rounded-3 ">Guardar</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row g-3">
-                        <div class="col-sm-12 col-md-6">
-                            <label for="nombreAdministrador" class="form-label">Nombre</label>
-                            <input id="nombreAdministrador" type="text" name="nombreAdmin" class="form-control"
-                                required>
-                        </div>
-                        <div class="col-sm-12 col-md-6">
-                            <label for="apellidoAdministrador" class="form-label">Apellido</label>
-                            <input id="apellidoAdministrador" type="text" name="apellidoAdmin" class="form-control"
-                                required>
-                        </div>
-                        <div class="col-sm-12 col-md-12">
-                            <label for="correoAdministrador" class="form-label">Correo</label>
-                            <input id="correoAdministrador" type="email" name="correoAdmin" class="form-control"
-                                required>
-                        </div>
-                        <div class="col-sm-12 col-md-12">
-                            <label for="aliasAdministrador" class="form-label">Alias</label>
-                            <input id="aliasAdministrador" type="text" name="aliasAdmin" class="form-control" required>
-                        </div>
-                        <div class="col-sm-12 col-md-12">
-                            <label for="claveAdministrador" class="form-label">Contraseña</label>
-                            <input id="claveAdministrador" type="password" name="claveAdmin" class="form-control"
-                                required>
-                        </div>
-                        <div class="col-sm-12 col-md-12">
-                            <label for="confirmarClave" class="form-label">Confirmar contraseña</label>
-                            <input id="confirmarClave" type="password" name="confirmarClave" class="form-control" required>
-                        </div>
-                        <input id="fechaRegistro" type="date" name="fechaRegistroAdmin" class="form-control" hidden>
-                        <div class="text-center">
-                            <button type="reset" class="btn btn-red-color text-light p-2 rounded-3">Cancelar</button>
-                            <button type="submit" class="btn btn-orange-color text-light p-2 rounded-3 ">Guardar</button>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
 
         </div>
