--- a/system_huellitas/views/admin/scrud_productos_perros.html
+++ b/system_huellitas/views/admin/scrud_productos_perros.html
@@ -47,15 +47,13 @@
         <div class="container mt-4">
             <div class="row align-items-center gy-4">
                 <div class="col-md-6 col-lg-6">
-                    <form class="d-flex" role="search" id="search_productos_perros">
-                        <input class="form-control rounded-4 shadow bg-white" type="search" aria-label="Search"
-                            id="searchPerros" name="searchPerros" placeholder="Buscar...">
-                    </form>
+                    <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
+                    <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search" id="searchInput" name="search" placeholder="Buscar un producto...">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <button
                         class="btn btn-red-color btn-sm text-light float-sm-left float-md-end float-lg-end rounded-3 p-2"
-                        data-bs-toggle="modal" data-bs-target="#agregar_producto" type="button">
+                        data-bs-toggle="modal" data-bs-target="#agregar_producto" onclick="openCreate()" type="button">
                         <img class="me-2" src="../../resources/img/png/boton_agregar.png" width="25px">
                         Agregar producto
                     </button>
@@ -67,6 +65,9 @@
             <table class="table align-middle">
                 <thead class="table">
                     <tr>
+                        <td colspan="7" id="rowsFound" hidden></td>
+                    </tr>
+                    <tr>
                         <th>Imagen</th>
                         <th>Nombre</th>
                         <th>Fecha de registro</th>
@@ -76,54 +77,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>
-                            <img src="../../resources/img/png/dog.png" alt="">
-                        </td>
-                        <td>Comida Rufo Para Perro Cachorro - 44lbs</td>
-                        <td>18 de octubre de 2024</td>
-                        <td>Alimentos</td>
-                        <td>
-                            <div class="form-check form-switch">
-                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
-                                    id="switch1" name="switch1" checked>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editar_producto"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#info_producto"><img src="../../resources/img/svg/info_icon.svg"
-                                    width="33px"></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="../../resources/img/png/dog.png" alt="">
-                        </td>
-                        <td>Comida Rufo Para Perro Cachorro - 44lbs</td>
-                        <td>18 de octubre de 2024</td>
-                        <td>Alimentos</td>
-                        <td>
-                            <div class="form-check form-switch">
-                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
-                                    id="switch2" name="switch2" checked>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editar_producto"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#info_producto"><img src="../../resources/img/svg/info_icon.svg"
-                                    width="33px"></button>
-                        </td>
-                    </tr>
+                    <div id="anyTable"></div>
                 </tbody>
             </table>
         </div>
@@ -248,129 +202,6 @@
             </div>
         </div>
 
-
-
-
-
-        <!-- Editar producto -->
-        <div class="modal fade" id="editar_producto" tabindex="-1" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable modal-fullscreen-sm-down">
-                <div class="modal-content">
-                    <div class="modal-header bg-orange-color">
-                        <div class="container text-center text-light">
-                            <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Editar producto</h1>
-                        </div>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form action="" id="crear_producto">
-                            <!-- Fila 1 -->
-                            <div class="container text-center text-md-start text-lg-start">
-                                <div class="row align-items-center gy-3">
-                                    <div class="col-sm-12 col-md-auto">
-                                        <img class="rounded-1" src="../../resources/img/png/rectangulo.png"
-                                            width="120px">
-                                    </div>
-                                    <div class="col">
-                                        <!-- Botón para cargar imagen -->
-                                        <input type="file" class="form-control" id="upload" hidden>
-                                        <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                        <label class="btn btn-red-color text-light" for="upload">Cargar imagen</label>
-                                    </div>
-                                    <div class="col-sm-12 col-md-auto">
-                                        <div class="form-check form-switch float-end mb-md-5">
-                                            <input class="form-check-input bg-orange-color" type="checkbox"
-                                                role="switch" id="switchPerros" name="switchPerros" checked>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Fila 2 -->
-                            <div class="container mt-4">
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-6 col-lg-6">
-                                        <div class="mb-3">
-                                            <label for="nombre_producto" class="form-label fw-semibold">Nombre</label>
-                                            <input type="text" class="form-control" id="nombre_producto"
-                                                name="nombre_producto">
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="descripcion_producto"
-                                                class="form-label fw-semibold">Descripción</label>
-                                            <textarea class="form-control" id="descripcion_producto"
-                                                name="descripcionProducto" rows="3"></textarea>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col">
-                                                <div class="mb-3">
-                                                    <label for="precio_producto"
-                                                        class="form-label fw-semibold">Precio</label>
-                                                    <input type="number" min="0" step="any" class="form-control"
-                                                        id="precio_producto" name="precioProducto">
-                                                </div>
-                                            </div>
-                                            <div class="col">
-                                                <div class="mb-3">
-                                                    <label for="cantidad_producto"
-                                                        class="form-label fw-semibold">Cantidad</label>
-                                                    <input type="number" class="form-control" id="cantidad_producto"
-                                                        name="cantidadProducto">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-6 col-lg-6">
-                                        <div class="mb-3">
-                                            <label for="tipo_mascota" class="form-label fw-semibold">Mascota</label>
-                                            <select class="form-select" id="tipo_mascota" name="tipoMascota" required>
-                                                <option selected disabled value="">Selecciona el tipo de mascota
-                                                </option>
-                                                <option>Perro</option>
-                                                <option>Gato</option>
-                                            </select>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="tipo_categoria" class="form-label fw-semibold">Categoría</label>
-                                            <select class="form-select" id="tipo_categoria" name="tipoCategoria"
-                                                required>
-                                                <option selected disabled value="">Selecciona la Categoría</option>
-                                                <option></option>
-                                                <option></option>
-                                            </select>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="tipo_marca" class="form-label fw-semibold">Marca</label>
-                                            <select class="form-select" id="tipo_marca" name="tipoMarca" required>
-                                                <option selected disabled value="">Selecciona la marca</option>
-                                                <option></option>
-                                            </select>
-                                            <div class="text-end mt-2">¿No existe la marca que buscas?</div>
-                                            <a class="btn btn-red-color btn-sm text-light rounded-3 p-1 float-end mt-1 "
-                                                type="button" href="../admin/scrud_marcas.html">
-                                                <img class="me-1" src="../../resources/img/png/boton_agregar.png"
-                                                    width="15px">
-                                                Agregar marca
-                                            </a>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                    </div>
-                    <div class="container text-center mb-4 mt-4">
-                        <button type="button" class="btn btn-orange-color text-light me-3" data-bs-dismiss="modal"
-                            id="btnGuardar" name="btnGuardar">Guardar</button>
-                        <button type="button" class="btn btn-red-color text-light" id="btnCancelar"
-                            name="btnCancelar">Cancelar</button>
-                    </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-
         <!-- Informacion producto -->
         <div class="modal fade" id="info_producto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-md modal-dialog-scrollable">
@@ -447,8 +278,14 @@
     </main>
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para las alertas -->
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- Agregamos el controlador general de la aplicacion-->
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
-    <script src="../../controllers/utils/admin.js"></script>
+    <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
+    <!-- Agregamos el controlador de la pagina web -->
+    <script type="text/javascript" src="../../controllers/admin/productos_perros.js"></script>
 </body>
 
 </html>
