--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -90,7 +90,7 @@
                     <div class="modal-header bg-orange-color">
                         <!-- Esto define el titiulo del modal que aparece en la franja naranja -->
                         <div class="container text-center">
-                            <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Agregar permiso
+                            <h1 class="modal-title fs-5 text-white fw-bold" id="modalTitle">Agregar permiso
                             </h1>
                         </div>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
@@ -104,7 +104,7 @@
                                 <div class="col-12">
                                     <p class="fs-8 btn-orange-color fw-bold">Nombre del permiso</p>
                                     <input type="text" class="form-control shadow bg-white" placeholder="Ej. Analista"
-                                        aria-label="codigo" id="NombreP_AgregarPermisos" name="NombrePermiso">
+                                        aria-label="codigo" id="NombrePermiso" name="NombrePermiso">
                                     <br>
                                 </div>
                                 <div class="col-12">
