--- a/system_huellitas/views/admin/scrud_productos_perros.html
+++ b/system_huellitas/views/admin/scrud_productos_perros.html
@@ -157,7 +157,11 @@
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <div class="mb-3">
                                             <label for="tipo_mascota" class="form-label fw-semibold">Mascota</label>
-                                            <select class="form-select" id="mascotaSelect" name="mascotas" required></select>
+                                            <select class="form-select" id="mascotaSelect" name="mascotas" required>
+                                                <option>Selecciona la mascota</option>
+                                                <option>Perro</option>
+                                                <option>Gato</option>
+                                            </select>
                                         </div>
                                         <div class="mb-3">
                                             <label for="tipo_categoria" class="form-label fw-semibold">Categoría</label>
