Productos casi terminado

--- a/system_huellitas/views/admin/scrud_productos_perros.html
+++ b/system_huellitas/views/admin/scrud_productos_perros.html
@@ -115,7 +115,7 @@
                                     <div class="col-sm-12 col-md-auto">
                                         <div class="form-check form-switch float-end mb-md-5">
                                             <input class="form-check-input bg-orange-color" type="checkbox"
-                                                role="switch" id="switchPerros" name="switchPerros" checked >
+                                                role="switch" id="switchPerros" name="EstadoProducto" checked >
                                         </div>
                                     </div>
                                 </div>
